# carbonation

./: .gitignore  README.md  Untitled.ipynb  app.py  main.py  nixpacks.toml  package-lock.json  package.json  package.json.old  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run.sh  setup.py  test_newsapi.py  test_newscatcher.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
analysis/: __init__.py  jobs.py  model.py  process.py
carbonation/: app.py  main.py
carbonation/analysis/: __init__.py  model.py  process.py
carbonation/jobs/: __init__.py  bert_job.py  jobs.py
carbonation/resources/computed/: bert_test.json
carbonation/resources/sources/: bad_sources.txt  nc_sources.json  sources.txt
carbonation/templates/: bubble.html  model.html  newscatcher.html
carbonation/utils/: __init__.py  fetch.py  utils.py
resources/articles/: newscatcher_4_11-05-2022_11:33:12.json  newscatcher_4hr_11-18-2022_01:55:31.json  newscatcher_4hr_11-21-2022_01:53:21.json  newscatcher_4hr_11-21-2022_02:02:51.json
resources/bias/: allsides_bias.json  mbfc_definitions.ts
resources/computed/: bert_4hr_11-05-2022_11:33:12.json  bert_test.json  topics_4_11-05-2022_11:33:12.json
resources/sources/: bad_sources.txt  nc_sources.json  nc_sources.json.old  newscatcher.json
sources/: newsapi.json
static/css/: custom.css  style.css  style.css.map
static/js/: script.js
templates/: about.html  bubble.html  data.html  model.html  newsapi.html  newscatcher.html
templates/components/: head.html  header.html  nav.html
utils/: __init__.py  fetch.py  utils.py
(+8 files in other folders)
